--- a/css/home.css
+++ b/css/home.css
@@ -18,9 +18,8 @@ html {
 */
 
 :root {
-  --bg: #f0f0f2;
+  --bg: #f4f1f1;
   --cardbg: #f8f7f8;
-  --green: #4c6;
   --defcol: #05445e;
   --textcol: #757785;
   --f-white: #fffeff;
@@ -33,16 +32,13 @@ html {
 .mi-n {
   padding-top: 3.6px;
 }
-html {
-  font: 400 15px var(--deffont);
-}
 body {
   display: grid;
-  grid-template: "hd hd hd hd" auto
-                  "mn mn mn mn" auto
-                  "ft ft ft ft" auto 
-                  / 1fr 1fr 1fr 1fr;
-
+  grid-template: "hd hd hd as" auto
+                  "mn mn mn as" auto
+                  "ft ft ft as" auto 
+                  / 1fr 1fr auto;
+  font: 400 14px var(--deffont);
   background: var(--bg);
   color: var(--textcol);
   margin: 0;
@@ -123,7 +119,7 @@ aside, div.account-card, .acc-link, .acc-avatar {
 }
 aside {
   grid-area: as;
-  background: var(--bg);
+  background: var(--dark-card);
   flex-flow: column wrap;
   box-shadow: 0px 2px 10px rgba(100, 100, 100, 0.2);  
 }
@@ -193,7 +189,7 @@ div.nav-cont > a:focus {
 }
 
 .nav-label {
-  margin-left: 0.6rem;
+  margin-left: 0.4rem;
 }
 /* Uniserval <main> */
 main {
@@ -202,36 +198,31 @@ main {
   padding: 0;
 }
 /* Uniserval <section> */
-section.service-opt {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-flow: row nowrap;
-  border: 1px solid #ccc;
-  margin: 1.2rem 2.0rem;
+section {
+  padding: 0 2.0rem 1.6rem;
 }
+
 section.sec-2 {
   width: 100%;
-  padding: 0 2.0rem 2.0rem;
+  padding: 0 2.0rem 0;
 }
 div.recc-title {
   margin: 0;
   width: 100%;
   color: #2b8;
 }
-
-/* cards */
 div.cards-container {
   background: none;
   display: flex;
   flex-flow: row wrap;
+  justify-content: space-between;
   padding: 0.8rem 0;
 }
 div.cards {
   background: #00000000;
-  width: 24%;
+  width: 28%;
   position: relative;
-  margin: 0.4rem;
+  margin-bottom: 0.8rem;
 }
 div.cards:hover {
   opacity: 0.8;
@@ -244,7 +235,7 @@ div.cards > img {
 }
 div.card-action {
   position: absolute;
-  bottom: 0rem;
+  bottom: 0.6rem;
   left: 0;
   width: 100%;
   padding: 0 0.8rem;
@@ -252,48 +243,158 @@ div.card-action {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  flex-flow: row nowrap;
-  background: var(--cardbg);
+  background: none;
 }
 div.loc-details {
-  color: var(--textcol);
+  color: #fefeff;
 }
 div.loc-details > p, div.loc-details > span {
-  /* text-shadow: -1px 2px 8px rgba(99, 99, 122, 0.8); */
+  text-shadow: -1px 2px 8px rgba(99, 99, 122, 0.8);
 }
 div.loc-details > p {
-  color: var(--textcol);
-  font: 400 1.0rem var(--deffont);
+  color: var(--defcol);
+  font: 500 1.rem var(--deffont);
   margin: 0 0 0.2rem;
+  color: #fafafa;
 }
 div.loc-details > span {
-  font-size: 0.88rem;
+  font-size: 0.8rem;
   display: block;
   margin: 0;
-  color: var(--green);
+  color: #efefef;
 }
-.go-website, section.service-opt > a {
-  text-decoration: none;
-  background: none;
-  padding: 0.4rem;
-  text-align: center;
-  border: 0.22px solid var(--textcol);
-  border-radius: 2pt;
-  color: var(--defcol);
-  font-size: 0.8rem;
-}
+
 .star {
   padding: 0.6rem 0.2rem;
   opacity: 0.5;
   color: #efefef;
 }
-.details-col {
+.star:hover {
+  opacity: 1;
+  
+}
+div.view-more-cont {
+  width: 100%;
+  
+}
+a.view-more {
+  display: block;
+  margin: auto;
+  text-decoration: none;
+  padding: 0.6rem 2.2rem;
+  width: 30%;
+  color: var(--defcol);
+  border: 1px solid var(--defcol);
   display: flex;
-  flex-flow: column wrap;
-  padding: 0.6rem;
-  background: pink;
+  align-items: center;
+  justify-content: center;
+}
+a.view-more:hover .mi-arrow {
+  opacity: 0.6;
+  transition: 0.6s;
+  transform: translateX(0.8rem);
+}
+.mi-arrow {
+  outline: none;
+  margin-left: 0.48rem;
 }
 
+article.news-arti {
+  margin-top: 3.2rem;
+}
+/* flexbox items after article */
+div.news-content-1, .loc-det-cont, #location-a, .gallery-link   {
+  display: flex;
+  align-items: center;
+}
+div.news-c-t {
+  padding: 0 2rem;
+}
+div.news-c-t > h1 {
+  font: 400 1.0rem var(--deffont);
+  margin: 0 0 0.8rem;
+  color: var(--defcol);
+}
+div.news-content-1 {
+  width: 100%;
+  padding: 0 2rem;
+  background-image: url(../images/news-img-2.jpeg);
+  background-size: cover;
+  background-position: center;
+  flex-flow: column wrap;
+  justify-content: center;
+  max-height: 400px;
+  min-height: 340px;
+}
+
+.loc-det-cont {
+  width: 50%;
+  margin-bottom: 0.8rem;
+}
+#location-a {
+  justify-content: center;
+  font-size: 1.4rem;
+  text-decoration: none;
+  text-align: center;
+  color: var(--bg-white);
+  padding: 10px 28px;
+  width: 100%;
+  background: #11111160;
+}
+#loc-city {
+  font-size: 1.4rem;
+  color: var(--f-white);
+}
+#loc-country {
+  padding: 0 2rem;
+  font-size: 1rem;
+  color: var(--sub-white);
+  padding: 0.26rem 0 0 0.4rem;
+}
+
+i.loc-ico {
+  font-size: 2.6rem;
+  color: transparent;
+  -webkit-text-stroke: 2px #fff;
+  -moz-text-stroke: 2px #fff;
+}
+
+.gallery-cont {
+  width: 50%;
+}
+div.img-cont {
+  width: 100%;
+  height: auto;
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+  overflow: hidden;
+}
+div.img-cont > img {
+  max-width: 30%;
+  max-height: 30%;
+  height: 30%;
+  width: 30%;
+}
+div.img-cont > img:hover {
+  transform: scale(1.6);
+}
+.gallery-link {
+  width: 30%;
+  height: 100%;
+  justify-content: center;
+  font-size: 1.4rem;
+  background: #11111190;
+  text-decoration: none;
+  text-align: center;
+  position: absolute;
+  right: 0;
+  z-index: 1;
+  color: var(--bg-white);
+}
+mi-img {
+  font-size: 2.0rem;
+}
 
 footer {
   width: 100%;
@@ -338,9 +439,6 @@ div.foot-contact a:hover {
 @media (max-width: 762px) {
   .mic-n {
     font-size: 1.4rem;
-  }
-  html {
-    font: 400 14px var(--deffont);
   }
   body {
    display: grid;
@@ -409,7 +507,7 @@ section.sec-1 {
 }
   
 section.sec-2 {
-  margin: 1.6rem 0 2.0rem;
+  margin-top: 1.6rem;
   padding: 0 1.6rem;
 }
 div.cards-container {
@@ -419,7 +517,7 @@ div.cards {
   width: 100%;
 }
 div.loc-details > p {
-  font: 500 1rem var(--deffont);
+  font: 600 1rem var(--deffont);
 }
 div.loc-details > span {
   font-size: 0.8rem;
@@ -428,7 +526,40 @@ div.loc-details > span {
 a.view-more {
   width: 100%;
 }
-
+article.news-arti {
+  margin-top: 3.2rem;
+}
+div.news-c-t {
+  padding: 0 1.6rem;
+}
+div.news-content-1 {
+  max-height: 300px;
+  min-height: 300px;
+  padding: 0;
+  flex-flow: column wrap;
+  justify-content: center;
+}
+div.loc-det-cont, div.gallery-cont {
+  text-decoration: none;
+}
+div.img-cont > img {
+  max-width: 30%;
+  max-height: 30%;
+  height: 30%;
+  width: 30%;
+}
+.gallery-link {
+  height: 100%;
+  width: 30%;
+  font-size: 1.2rem;
+}
+mi-img {
+  font-size: 1.2rem;
+}
+.loc-det-cont, .gallery-cont {
+  width: 100%;
+  padding: 0 1.6rem;
+}
 footer {
   padding: 1.6rem 1rem 6.6rem;
 }
@@ -453,11 +584,10 @@ div.foot-contact {
 @media screen and (min-width: 762px) and (max-width: 990px) {
   body {
     display: grid;
-    grid-template: "hd hd hd hd" auto
-    "mn mn mn mn" auto
-    "ft ft ft ft" auto 
-    / 1fr 1fr 1fr 1fr;
-    font: 400 14px var(--deffont);
+    grid-template: "hd hd hd as" auto
+                  "mn mn mn as" auto
+                  "ft ft ft as" auto 
+                  / auto auto auto;
   }
   div.avatar {
     display: none;
@@ -483,16 +613,10 @@ div.nav-cont {
   width: 100%;
   max-width: 100%;
 }
-div.cards {
-  width: 20%;
-}
 a.ad {
   display: none;
 }
 div.loc-det-cont, div.gallery-cont {
   width: 60%;
-}
-div.loc-details > p {
-  font: 400 1.0rem var(--deffont);
 }
 }
