--- a/css/confirm.css
+++ b/css/confirm.css
@@ -62,6 +62,7 @@
   }
   .form-cont > h1 {
     font: 600 1.4rem var(--fontdef);
+    color: var(--carddark);
     margin: 1.2rem 0;
     text-align: center;
   }
@@ -84,13 +85,15 @@
     background: none;
     padding: 0.6rem 1.2rem;
     border: none;
-    font-size: 1.6rem;
+    font-size: 1.4rem;
     pointer-events: none;
+    color: var(--carddark);
   }
   input.dates, input.time, select {
     border: none;
     padding: 0.4rem;
     background: #ddd;
+    color: var(--textdark);
   }
   input.time {
     padding: 0.28rem;
@@ -100,10 +103,20 @@
     flex-flow: row nowrap;
     width: 100%;
   }
-  .service-partners {
-    background: none;
+  div.service-partners, div.serv-two {
+    
+    background-position: center;
+    background-repeat: no-repeat;
     margin-right: 1.2rem;
     position: relative;
+  }
+  div.service-partners {
+    background-image: url("../images/dp/Uber-Logo.wine.png");
+    background-size: 80px;
+  }
+  div.serv-two {
+    background-image: url("../images/dp/vitytaxi.jpg");
+    background-size: 180px;
   }
   .radio-btn-t {
     appearance: none;
@@ -115,7 +128,7 @@
     z-index: 6;
     top: 0;
     left: 0;
-    background: #33333350;
+    background: none;
     margin: 0;
     padding: 0;
   }
