--- a/css/confirm.css
+++ b/css/confirm.css
@@ -68,6 +68,7 @@
   }
   .ep {
     font-size: 0.8rem;
+    color: #d44;
     margin: 0.2rem;
     padding: 0;
   }
@@ -142,6 +143,26 @@
   }
   .confirm-bk {
    text-decoration: none;
+   background: var(--accent);
+   text-align: center;
+   margin: 1.6rem auto 0.8rem;
+   padding: 0.8rem;
+   font: 400 1rem var(--fontdef);
+   border: none;
+   border-radius: 2pt;
+   color: var(--textwhite);
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   width: 50%;
+  }
+
+  /* *****************************
+  * Exclusive for booking_action.php
+  ****************************** */
+
+  a.sett-link {
+    text-decoration: none;
    background: var(--accent);
    text-align: center;
    margin: 1.6rem auto 0.8rem;
