MC: bookings now work 00:02 24-11-22

--- a/css/confirm.css
+++ b/css/confirm.css
@@ -161,7 +161,7 @@
   * Exclusive for booking_action.php
   ****************************** */
 
-  a.sett-link {
+  .sett-link {
     text-decoration: none;
    background: var(--accent);
    text-align: center;
