--- a/css/settings.css
+++ b/css/settings.css
@@ -60,7 +60,8 @@
   }
   div.tabDiv {
     width: 100%;
-    background: #ccc;
+    background: var(--bgwhite);
+    border-bottom: 4px solid #05445e;
     padding: 0.8rem;
     margin: 1.2rem 0;
     display: none;
