--- a/css/destination.css
+++ b/css/destination.css
@@ -195,7 +195,7 @@
     align-items: center;
   }
   .rating {
-    color: #f7f75c;
+    color: #caca4f;
   }
   div.usr-actions {
     justify-content: space-between;
