--- a/css/settings.css
+++ b/css/settings.css
@@ -21,10 +21,10 @@
     --accent: #05445e;
     --green: #4c6;
 
-    --bg: #ddd;
+    --bg: #dededf;
     --bgwhite: #fefeff;
     --cardbg: #f8f7f8;
-    --carddark: #1B2232;
+    --carddark: #262b36;
 
     --textsub: #757785;
     --textwhite: #efefff;
@@ -36,19 +36,158 @@
     padding-top: 3.6px;
   }
   body {
-    font: 400 1rem var(--fontdef);
+
     background: var(--bg);
     color: var(--textsub);
     margin: 0;
     padding: 0;
   }
-  section.sec-one {
-    padding: 2.0rem;
+  
+  header {
+    padding: 0.6rem 2.2rem;
+    margin-top: 0;
+    background: var(--bgwhite);
   }
-  div.tabs-cont {
+  header a {
+    text-decoration: none;
+  }
+  /* flexset 1 */
+  nav.nav-panel, div.logo-container, div.top-nav {
     display: flex;
-    justify-content: flex-start;
+    align-items: center;
   }
+  nav.nav-panel {
+    width: 100%;
+    background: none;
+    justify-content: space-between;
+  }
+  div.logo-container {
+    height: 40px;
+    color: #1add9f;
+  }
+  a.logo {
+    font: 600 18pt var(--fontdef);
+    color: var(--accent);
+  }
+  div.nav-profile {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  div.top-nav {
+    min-width: 32%;
+    padding: 0;
+    margin: auto;
+    justify-content: flex-end;
+  }
+  
+  div.top-nav > a {
+   color: var(--textsub);
+   font-size: 0.8rem;
+   margin: 0 1.2rem;
+   padding: 0.6rem;
+  }
+  div.top-nav > a:hover, div.top-nav > a:active  {
+    border-bottom: 2px solid var(--accent);
+    color: var(--accent);
+  }
+  div.avatar {
+    width: 46px;
+    height: 46px;
+    padding: 0;
+    display: none;
+    align-items: center;
+    justify-content: center;
+  }
+  .avatar-ico {
+    transform: scale(2.2);
+    display: none;
+  }
+  .avatar > img {
+    width: 3.2rem;
+    height: 3.2rem;
+    border-radius: 50%;
+    display: block;
+  }
+  /* flexset 1 end */
+  
+  aside, div.account-card, .acc-link, .acc-avatar {
+    display: flex;
+  }
+  aside {
+    background: var(--bg);
+    flex-flow: column wrap;
+    box-shadow: 0px 2px 10px rgba(100, 100, 100, 0.2);  
+  }
+  aside a {
+    text-decoration: none;
+  }
+  div.aside-cont {
+    position: sticky;
+    top: 0;
+    bottom: 0;
+    z-index: 99;
+    background: var(--carddark);
+  }
+  div.account-card {
+   width: 100%;
+   background: var(--accent);
+   padding: 2.0rem 0.8rem;
+   justify-content: center;
+  }
+  .acc-link {
+    text-decoration: none;
+    color: var(--textwhite);
+    flex-flow: column wrap;
+    justify-content: center;
+    text-align: center;
+  }
+  .avatar-title {
+    margin-top: 0.8rem;
+    font: 500 1rem var(--fontdef);
+    display: block;
+  }
+  .acc-avatar {
+    background: transparent;
+    max-width: 4.0rem; 
+    max-height: 4.0rem;
+    height: 4.0rem;
+    width: 4.0rem;
+    border-radius: 50px;
+  }
+  img.user-dp {
+    width: 100%;
+    height: 100%;
+    border-radius: inherit;
+  }
+  div.nav-cont {
+    background: var(--carddark);
+    position: relative;
+    width: 200px;
+    max-width: 200px;
+  }
+  div.nav-cont  > a {
+      padding: 0.6rem 1.2rem;
+      font: 400 1rem var(--fontdef);
+      background: none;
+      color: var(--textwhite);
+      display: flex;
+      align-items: center;
+      width: 100%;
+      margin: 0.8rem 0 0;
+  }
+  a.ad {
+    display: flex;
+  }
+  div.nav-cont > a:hover,
+  div.nav-cont > a:focus {
+    opacity: 0.6;
+  }
+  
+  .nav-label {
+    margin-left: 0.6rem;
+  }
+
   div.tabs-cont > a {
     text-align: center;
     text-decoration: none;
@@ -102,3 +241,31 @@
     display: block;
     margin: auto;
   }
+
+/*+++++++++++++++++++++++++++++++
+ Exclusive for adminPanel.php
+++++++++++++++++++++++++++++++++*/
+
+table {
+  background: var(--bgwhite);
+  padding: 0.6rem;
+  font: 400 1rem var(--fontdef);
+}
+ tr {
+  padding: 0.4rem 1.0rem;
+}
+ tr:nth-child(even) {
+  background: #e2e2e6;
+}
+ td {
+  padding: 0.8rem;
+ }
+ .tb-btn {
+    padding: 0.6rem; 
+    margin: auto;
+    border: none;
+ }
+ .d-btn {
+  background: #d66;
+  color: var(--textwhite);
+ }
