--- a/css/settings.css
+++ b/css/settings.css
@@ -42,143 +42,12 @@
     margin: 0;
     padding: 0;
   }
-  
-  header {
-    padding: 0.6rem 2.2rem;
-    margin-top: 0;
-    background: var(--bgwhite);
-  }
-  header a {
-    text-decoration: none;
-  }
   /* flexset 1 */
-  nav.nav-panel, div.logo-container, div.top-nav {
-    display: flex;
-    align-items: center;
+  div.title {
+    padding: 2rem 1.0rem;
+    font-size: 0.8rem;
   }
-  nav.nav-panel {
-    width: 100%;
-    background: none;
-    justify-content: space-between;
-  }
-  div.logo-container {
-    height: 40px;
-    color: #1add9f;
-  }
-  a.logo {
-    font: 600 18pt var(--fontdef);
-    color: var(--accent);
-  }
-  div.nav-profile {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
-  div.top-nav {
-    min-width: 32%;
-    padding: 0;
-    margin: auto;
-    justify-content: flex-end;
-  }
-  
-  div.top-nav > a {
-   color: var(--textsub);
-   font-size: 0.8rem;
-   margin: 0 1.2rem;
-   padding: 0.6rem;
-  }
-  div.top-nav > a:hover, div.top-nav > a:active  {
-    border-bottom: 2px solid var(--accent);
-    color: var(--accent);
-  }
-  div.avatar {
-    width: 46px;
-    height: 46px;
-    padding: 0;
-    display: none;
-    align-items: center;
-    justify-content: center;
-  }
-  .avatar-ico {
-    transform: scale(2.2);
-    display: none;
-  }
-  .avatar > img {
-    width: 3.2rem;
-    height: 3.2rem;
-    border-radius: 50%;
-    display: block;
-  }
-  /* flexset 1 end */
-  
-  aside, div.account-card, .acc-link, .acc-avatar {
-    display: flex;
-  }
-  aside {
-    background: var(--bg);
-    flex-flow: column wrap;
-    box-shadow: 0px 2px 10px rgba(100, 100, 100, 0.2);  
-  }
-  aside a {
-    text-decoration: none;
-  }
-  div.aside-cont {
-    position: sticky;
-    top: 0;
-    bottom: 0;
-    z-index: 99;
-    background: var(--carddark);
-  }
-  div.account-card {
-   width: 100%;
-   background: var(--accent);
-   padding: 2.0rem 0.8rem;
-   justify-content: center;
-  }
-  .acc-link {
-    text-decoration: none;
-    color: var(--textwhite);
-    flex-flow: column wrap;
-    justify-content: center;
-    text-align: center;
-  }
-  .avatar-title {
-    margin-top: 0.8rem;
-    font: 500 1rem var(--fontdef);
-    display: block;
-  }
-  .acc-avatar {
-    background: transparent;
-    max-width: 4.0rem; 
-    max-height: 4.0rem;
-    height: 4.0rem;
-    width: 4.0rem;
-    border-radius: 50px;
-  }
-  img.user-dp {
-    width: 100%;
-    height: 100%;
-    border-radius: inherit;
-  }
-  div.nav-cont {
-    background: var(--carddark);
-    position: relative;
-    width: 200px;
-    max-width: 200px;
-  }
-  div.nav-cont  > a {
-      padding: 0.6rem 1.2rem;
-      font: 400 1rem var(--fontdef);
-      background: none;
-      color: var(--textwhite);
-      display: flex;
-      align-items: center;
-      width: 100%;
-      margin: 0.8rem 0 0;
-  }
-  a.ad {
-    display: flex;
-  }
+
   div.nav-cont > a:hover,
   div.nav-cont > a:focus {
     opacity: 0.6;
@@ -257,14 +126,49 @@ div.form-cont {
 .def-tab {
   display: block;
 }
+h1.titles {
+  margin: 1.8rem 2rem;
+  font: 400 1.6rem var(--fontdef);
+}
+div.statis {
+  display: flex;
+  flex-flow: row wrap;
+}
+.stat-card-cont {
+  display: flex;
+  align-items: center;
+  margin: 1.0rem;
+  padding: 1.0rem 1.8rem;
+  background: var(--sub-white);
+  border-radius: 3pt;
+  box-shadow: 1px 1px 12px #05445e50;
+}
+.stats-card {
+  width: 100px;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: var(--bg);
+  border-radius: 50%;
+  color: #d66;
+}
+.stats-card > h1 {
+  font: 600 2.0rem var(--fontdef);
+}
+.stat-card-desc {
+  font-size: 1.4rem;
+  font-weight: 400;
+  margin-left: 1.2rem;
+}
 table {
   background: var(--bgwhite);
   padding: 0.6rem;
   font: 400 1rem var(--fontdef);
-  box-shadow: 0px 2px 10px rgba(100, 100, 100, 0.2);
+  box-shadow: 0px 2px 10px #05445e20;
 }
  tr {
-  padding: 0.4rem 1.0rem;
+  padding: 0.2rem 1.0rem;
 }
  tr:nth-child(even) {
   background: #e2e2e6;
