--- a/css/settings.css
+++ b/css/settings.css
@@ -37,15 +37,18 @@
   }
   body {
 
-    background: var(--bg);
+    background: #21212c;
     color: var(--textsub);
     margin: 0;
     padding: 0;
   }
+  header {
+    background: none;
+  }
   /* flexset 1 */
   div.title {
     padding: 2rem 1.0rem;
-    font-size: 0.8rem;
+    font-size: 0.88rem;
   }
 
   div.nav-cont > a:hover,
@@ -129,6 +132,7 @@ div.form-cont {
 h1.titles {
   margin: 1.8rem 2rem;
   font: 400 1.6rem var(--fontdef);
+  color: #aaa;
 }
 div.statis {
   display: flex;
@@ -161,17 +165,25 @@ div.statis {
   font-weight: 400;
   margin-left: 1.2rem;
 }
+.table-cont > h3 {
+  font: 400 1rem var(--fontdef);
+  color: #aaa;
+}
 table {
-  background: var(--bgwhite);
+  background: darkslategray;
   padding: 0.6rem;
   font: 400 1rem var(--fontdef);
   box-shadow: 0px 2px 10px #05445e20;
+  color: #eee;
+  border-radius: 3.2pt;
 }
  tr {
   padding: 0.2rem 1.0rem;
+  letter-spacing: 1px;
+  font-size: 0.8rem;
 }
  tr:nth-child(even) {
-  background: #e2e2e6;
+  background: #55555f;
 }
  td {
   padding: 0.8rem;
