--- a/css/home.css
+++ b/css/home.css
@@ -141,7 +141,7 @@ div.account-card {
 }
 .acc-link {
   text-decoration: none;
-  color: var(--sub-white);
+  
   flex-flow: column wrap;
   justify-content: center;
   text-align: center;
@@ -150,6 +150,8 @@ div.account-card {
   margin-top: 0.8rem;
   font: 500 1rem var(--deffont);
   display: block;
+  color: var(--textcol);
+  text-transform: uppercase;
 }
 .acc-avatar {
   background: transparent;
@@ -250,6 +252,7 @@ div.cards-container {
 }
 div.cards {
   background: #00000000;
+  border-radius: 2pt;
   width: 28%;
   position: relative;
   margin-bottom: 0.8rem;
